# upKeepify-tauri-app

./: .env  .gitignore  Cargo.toml  Trunk.toml
src/: main.rs  utils.js  utils.rs
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src/components/: home.rs
